# TcpServer

./: CMakeLists.txt  main.cpp
UI/: tcpserver.cpp  tcpserver.h  tcpserver.ui  ui_tcpserver.h
UsrFile/qqqq/first/: test.txt
database/: cloud.db
func/: OpeDB.cpp  OpeDB.h  mytcpserver.cpp  mytcpserver.h  mytcpsocket.cpp  mytcpsocket.h  portocol.cpp  portocol.h
